# praxis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  conftest.py  pyproject.toml
.claude/: .coc-sync-marker  VERSION  settings.json
.claude/agents/: README.md  _README.md  build-fix.md  claude-code-architect.md  deep-analyst.md  deployment-specialist.md  documentation-validator.md  framework-advisor.md  gold-standards-validator.md  intermediate-reviewer.md  open-source-strategist.md  pattern-expert.md  sdk-navigator.md  security-reviewer.md  tdd-implementer.md  testing-specialist.md  value-auditor.md
.claude/agents/frameworks/: dataflow-specialist.md  infrastructure-specialist.md  kaizen-specialist.md  mcp-specialist.md  nexus-specialist.md  pact-specialist.md
.claude/agents/frontend/: ai-ux-designer.md  flutter-specialist.md  frontend-developer.md  react-specialist.md  uiux-designer.md
.claude/agents/management/: gh-manager.md  git-release-specialist.md  todo-manager.md
.claude/agents/project/: README.md  praxis-api-expert.md  praxis-bundle-expert.md  (+8 more)
.claude/commands/: analyze.md  cc-audit.md  codify.md  deploy.md  i-audit.md  i-harden.md  implement.md  redteam.md  sync.md  test.md  todos.md  validate.md  wrapup.md  ws.md
.claude/guides/: automated-maintenance.md
.claude/learning/: observations.jsonl
.claude/rules/: agent-reasoning.md  agents.md  artifact-flow.md  autonomous-execution.md  cc-artifacts.md  connection-pool.md  cross-sdk-inspection.md  dataflow-pool.md  deployment.md  documentation.md  eatp.md  git.md  independence.md  infrastructure-sql.md  journal.md  learned-instincts.md  no-stubs.md  pact-governance.md  terrene-naming.md  testing.md  trust-plane-security.md  zero-tolerance.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
apps/desktop/: README.md  pubspec.yaml
apps/mobile/: README.md  analysis_options.yaml  pubspec.yaml
apps/vscode/: .vscodeignore  package-lock.json  package.json  tsconfig.json
apps/web/: .env.example  Dockerfile  cloudbuild.yaml  index.html  package-lock.json  package.json  vite.config.ts
deploy/: deployment-config.md
deploy/deployments/: 2026-03-17-v0.1.1.md
docs/00-authority/: CLAUDE.md  README.md
scripts/hooks/: pre-compact.js  session-end.js  session-start.js  stop.js  user-prompt-rules-reminder.js  validate-bash-command.js  validate-workflow.js
scripts/learning/: instinct-processor.js
scripts/plugin/: post-install.js  pre-uninstall.js
src/praxis/: __init__.py  cli.py  config.py
tests/conformance/: __init__.py  conftest.py  test_eatp.py
tests/e2e/: test_mcp_to_bundle.py
tests/integration/: conftest.py  test_api_handlers.py  test_dataflow_roundtrip.py  test_edge_cases.py  test_final_redteam.py  test_learning_pipeline.py  test_mcp_proxy.py  test_multi_tool_context.py  test_product_vision_spec.py  test_session_lifecycle.py  test_sqlite_persistence.py  test_trust_chain_lifecycle.py
tests/unit/: conftest.py  test_adversarial.py  test_anti_amnesia.py  test_api.py  test_archive.py  test_audit.py  test_audit_review.py  test_auth.py  test_bainbridge.py  test_bundle.py  test_calibration.py  test_cli.py  test_config.py  test_constraint.py  test_delegation.py  test_deliberation.py  test_domain.py  test_errors.py  test_firebase_auth.py  test_genesis.py  test_gradient.py  test_keys.py  test_learning.py  test_m05_m06.py  test_m12_m13.py  test_mcp_proxy.py  test_models.py  test_oauth.py  test_properties.py  test_queries.py  test_rate_limit.py  test_report.py  test_rules.py  test_session.py  test_verify.py  test_websocket.py
workspaces/praxis/: decisions.yml
(+407 files in other folders)
