[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praxis-co"
version = "0.1.0"
description = "Praxis — Open-source CO (Cognitive Orchestration) platform for trust-aware human-AI collaboration"
authors = [
    {name = "Terrene Foundation", email = "info@terrene.foundation"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    # Kailash SDK — pinned to tested versions for reproducible installs
    "kailash>=0.12.5,<2.0",
    "kailash-nexus>=1.4.2,<2.0",
    "kailash-dataflow>=0.12.4,<1.0",
    "kailash-kaizen>=1.2.5,<2.0",
    # Kailash transitive deps (pinned for CI reliability — kailash 1.0 trimmed some)
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    # EATP SDK (trust protocol implementation)
    "eatp>=0.1.0",
    # Trust Plane (EATP reference implementation)
    "trust-plane>=0.2.0",
    # CLI Framework
    "click>=8.0",
    "rich>=13.0.0",
    # Database migrations
    "alembic>=1.12.0",
    # Cryptography (for EATP trust chains)
    "cryptography>=41.0.0",
    # JCS canonical JSON serialization (RFC 8785)
    "jcs>=0.2.1",
    # Rate limiting
    "slowapi>=0.1.9",
    # Firebase token verification
    "PyJWT>=2.8.0",
    "httpx>=0.25.0",
    # Web framework (transitive dep of kailash-nexus, pinned for CI reliability)
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    # System monitoring (required by kailash runtime)
    "psutil>=5.9.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing (pytest>=7.2.0 removes vulnerable py dependency)
    "pytest>=7.2.0",
    "hypothesis>=6.0.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    # Linting & Formatting
    "black>=23.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    # Security & Pre-commit
    "detect-secrets>=1.5.0",
    "pre-commit>=4.2.0",
]

[project.scripts]
praxis = "praxis.cli:main"

[project.urls]
"Homepage" = "https://github.com/terrene-foundation/praxis"
"Bug Tracker" = "https://github.com/terrene-foundation/praxis/issues"
"Documentation" = "https://terrene.dev/praxis"

[tool.setuptools.package-data]
praxis = [
    "domains/*/domain.yml",
    "domains/*/constraints/*.yml",
    "export/templates/*.html",
    "export/templates/*.js",
    "export/templates/*.css",
    "export/templates/*.txt",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", ".*", "__pycache__*", "workspaces*", "docs*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
